fixed dark mode

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ h5 {
   display: flex;
   justify-content: center; /* Centers horizontally */
   align-items: center;
-  background-color: rgb(2, 2, 1);
+  background-color: rgb(95, 79, 60);
   color: white;
 }
 
@@ -86,22 +86,16 @@ h5 {
 }
 
 #nav-bar {
-    background-color: black;
+    background-color: rgb(26, 22, 17);
     width: 100%;
     height: 45px;
     position: sticky;
     top: 0;
     z-index: 100;
-    
-}
-
-#nav-bar .is-stuck {
-  filter: drop-shadow(0px 10px 40px rgb(0, 0, 0));
 }
 
 #nav-bar li {
     font-family: 'Arial Narrow', Arial, sans-serif;
-    background-color: black;
     color: white;
     padding: 10px;
 
@@ -112,7 +106,7 @@ h5 {
 }
 
 #nav-bar li:hover {
-  background-color: rgb(49, 49, 49);
+  filter: invert(30%);
 }
 
 #nav-bar a {
